--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 140px;
   }
 }
 header {
   display: flex;
-  width: 100vw;
   align-items: center;
   justify-content: center;
   height: 80px;
+  gap: 30px;
   background-color: #4c7273;
 }
 
