--- a/css/main.css
+++ b/css/main.css
@@ -17,20 +17,33 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 140px;
+    margin-top: 210px;
+  }
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    margin-top: 3px;
+    background-color: #4c7273;
+    padding: 20px;
+    height: 30px;
+    border-radius: 30px;
+    text-decoration: none;
+    color: #d0d6d6;
+  }
+  input[type=checkbox]:checked ~ body {
+    background-color: blue;
   }
 }
 header {
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: center;
   height: 80px;
   gap: 30px;
   background-color: #4c7273;
-}
-
-.logo {
-  width: 100px;
 }
 
 .toggle {
