--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,14 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-  nav {
+  .nav {
     width: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 210px;
+    opacity: 0;
   }
   a {
     display: flex;
@@ -32,8 +33,8 @@ body {
     text-decoration: none;
     color: #d0d6d6;
   }
-  input[type=checkbox]:checked ~ body {
-    background-color: blue;
+  .check:checked ~ .nav {
+    opacity: 1;
   }
 }
 header {
