--- a/main.scss
+++ b/main.scss
@@ -14,13 +14,14 @@ body {
     background-color: $white;
 }
 @media only screen and (max-width: 768px) {
-    nav {
+    .nav {
         width: 100%;
         position: absolute;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-top: 210px;
+        opacity: 0;
     }
     a {
         display: flex;
@@ -35,8 +36,8 @@ body {
         text-decoration: none;
         color: $white;
     }
-    input[type="checkbox"]:checked ~ body{
-        background-color: blue;
+    .check:checked ~ .nav{
+        opacity: 1;
         
     }
 
