--- a/css/main.css
+++ b/css/main.css
@@ -11,32 +11,116 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 35px;
+  }
   .nav {
     width: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 210px;
-    opacity: 0;
+    margin-top: 200px;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    transform: scaleY(0);
+    transform-origin: 50% 0;
+    transition: transform 0.5s ease-in-out;
   }
   a {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    margin-top: 3px;
-    background-color: #4c7273;
+    width: 100%;
     padding: 20px;
     height: 30px;
-    border-radius: 30px;
     text-decoration: none;
-    color: #d0d6d6;
+    color: #041421;
+  }
+  .hamburger_menu {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: 5px;
+    width: 45px;
+    height: 40px;
+    transition: 0.6s;
+  }
+  .check {
+    position: absolute;
+    display: block;
+    z-index: 1;
+    margin-left: 175px;
+    height: 50px;
+    width: 50px;
+    opacity: 0;
   }
   .check:checked ~ .nav {
-    opacity: 1;
+    transform: scaleY(1);
+  }
+  .check:checked ~ .hamburger_menu span:nth-child(1) {
+    transform: rotate(45deg);
+    transform-origin: 0% 0%;
+    margin-left: 8px;
+  }
+  .check:checked ~ .hamburger_menu span:nth-child(2) {
+    opacity: 0;
+  }
+  .check:checked ~ .hamburger_menu span:nth-child(3) {
+    transform: rotate(-45deg);
+    transform-origin: 0% 100%;
+    margin-left: 8px;
+  }
+  .check:checked ~ .hamburger_menu {
+    transform: rotate(180deg);
+  }
+  span {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 7px;
+    border-radius: 10px;
+    background-color: #041421;
+  }
+  span:nth-child(1) {
+    transition: 0.4s;
+  }
+  span:nth-child(2) {
+    margin-top: 15px;
+  }
+  span:nth-child(3) {
+    margin-top: 30px;
+    transition: 0.4s;
   }
 }
+@media only screen and (min-width: 768px) {
+  .check {
+    visibility: hidden;
+  }
+  span {
+    visibility: hidden;
+  }
+  .nav {
+    display: flex;
+    gap: 30px;
+  }
+  a {
+    text-decoration: none;
+    color: #041421;
+    font-weight: bold;
+    font-size: 20px;
+  }
+  a:hover {
+    color: #042630;
+  }
+  label {
+    margin-left: 20px;
+  }
+}
+h1 {
+  color: #041421;
+}
+
 header {
   display: flex;
   width: 100%;
@@ -45,6 +129,14 @@ header {
   height: 80px;
   gap: 30px;
   background-color: #4c7273;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  background-color: #86b9b0;
 }
 
 .toggle {
