--- a/main.scss
+++ b/main.scss
@@ -14,33 +14,114 @@ body {
     background-color: $white;
 }
 @media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 35px;
+    }
     .nav {
         width: 100%;
         position: absolute;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 210px;
-        opacity: 0;
+        margin-top: 200px;
+        background: rgba( 255, 255, 255, 0.5 );
+        backdrop-filter: blur( 5px );
+        transform: scaleY(0);
+        transform-origin: 50% 0;
+        transition: transform 0.5s ease-in-out;
     }
     a {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 200px;
-        margin-top: 3px;
-        background-color: $blue;
+        width: 100%;
         padding: 20px;
         height: 30px;
-        border-radius: 30px;
         text-decoration: none;
-        color: $white;
+        color: $darkgrey;
     }
-    .check:checked ~ .nav{
-        opacity: 1;
-        
+    .hamburger_menu {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        margin-top: 5px;
+        width: 45px;
+        height: 40px;
+        transition: 0.6s;
     }
-
+    .check{
+        &:checked ~ .nav{
+            transform: scaleY(1);
+        }
+        &:checked ~ .hamburger_menu span:nth-child(1) {
+            transform: rotate(45deg);
+            transform-origin: 0% 0%;
+            margin-left: 8px;
+        }
+        &:checked ~ .hamburger_menu span:nth-child(2) {
+            opacity: 0;
+        }
+        &:checked ~ .hamburger_menu span:nth-child(3) {
+            transform: rotate(-45deg);
+            transform-origin: 0% 100%;
+            margin-left: 8px;
+        }
+        &:checked ~ .hamburger_menu {
+            transform: rotate(180deg);
+        }
+        position: absolute;
+        display: block;
+        z-index: 1;
+        margin-left: 175px;
+        height: 50px;
+        width: 50px;
+        opacity: 0;
+    }
+    span {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 7px;
+        border-radius: 10px;
+        background-color: $darkgrey;
+        &:nth-child(1) {
+            transition: 0.4s;
+        }
+        &:nth-child(2) {
+            margin-top: 15px;
+        }
+        &:nth-child(3) {
+            margin-top: 30px;
+            transition: 0.4s;
+        }
+    }
+}
+@media only screen and (min-width: 768px) { 
+    .check {
+        visibility: hidden;
+    }
+    span {
+        visibility: hidden;
+    }
+    .nav {
+        display: flex;
+        gap: 30px;
+    }
+    a {
+        text-decoration: none;
+        color: $darkgrey;
+        font-weight: bold;
+        font-size: 20px;
+        &:hover {
+            color: $darkblue;
+        }
+    }
+    label {
+        margin-left: 20px;
+    }
+}
+h1 {
+    color: $darkgrey;
 }
 header {
     display: flex;
@@ -50,6 +131,13 @@ header {
     height: 80px;
     gap: 30px;
     background-color: $blue;
+}
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    background-color: $lightblue;
 }
 .toggle {
     cursor: pointer;
