--- a/main.scss
+++ b/main.scss
@@ -12,6 +12,7 @@ $white: #d0d6d6;
 }
 body {
     background-color: $white;
+    overflow-x: hidden;
 }
 @media only screen and (max-width: 768px) {
     h1 {
