--- a/main.scss
+++ b/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 $darkgrey: #041421;
 $darkblue: #042630;
-$blue: #4c7273;
+$blue: #5aa7aa;
 $lightblue: #86b9b0;
 $white: #d0d6d6;
 * {
