--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ body {
   overflow-x: hidden;
 }
 
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 20px;
+  }
+}
 @media only screen and (max-width: 768px) {
   h1 {
     font-size: 35px;
@@ -21,7 +26,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 200px;
+    margin-top: 240px;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
     transform: scaleY(0);
@@ -129,7 +134,7 @@ header {
   justify-content: center;
   height: 80px;
   gap: 30px;
-  background-color: #4c7273;
+  background-color: #5aa7aa;
 }
 
 footer {
