--- a/main.scss
+++ b/main.scss
@@ -14,6 +14,11 @@ body {
     background-color: $white;
     overflow-x: hidden;
 }
+@media only screen and (max-width: 600px) { 
+    h1 {
+        font-size: 20px;
+    }
+}
 @media only screen and (max-width: 768px) {
     h1 {
         font-size: 35px;
@@ -24,7 +29,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 200px;
+        margin-top: 240px;
         background: rgba( 255, 255, 255, 0.5 );
         backdrop-filter: blur( 5px );
         transform: scaleY(0);
