--- a/css/styl.css
+++ b/css/styl.css
@@ -11,9 +11,12 @@ body {
   overflow-x: hidden;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
   h1 {
-    font-size: 35px;
+    font-size: 15px;
+  }
+  header {
+    height: 60px;
   }
   .nav {
     width: 100%;
@@ -21,10 +24,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 200px;
+    margin-top: 240px;
     background: rgba(255, 255, 255, 0.5);
-    -webkit-backdrop-filter: blur(5px);
-            backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     transform: scaleY(0);
     transform-origin: 50% 0;
     transition: transform 0.5s ease-in-out;
@@ -43,19 +45,20 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 5px;
     width: 45px;
     height: 40px;
     transition: 0.6s;
+    scale: 0.7;
   }
   .check {
     position: absolute;
     display: block;
     z-index: 1;
-    margin-left: 175px;
+    margin-left: 45px;
     height: 50px;
     width: 50px;
     opacity: 0;
+    scale: 0.7;
   }
   .check:checked ~ .nav {
     transform: scaleY(1);
@@ -94,86 +97,10 @@ body {
     margin-top: 30px;
     transition: 0.4s;
   }
-}
-@media only screen and (min-width: 768px) {
-  .check {
-    visibility: hidden;
-  }
-  span {
-    visibility: hidden;
-  }
-  .nav {
-    display: flex;
-    gap: 30px;
-  }
-  a {
-    text-decoration: none;
-    color: #041421;
-    font-weight: bold;
-    font-size: 20px;
-  }
-  a:hover {
-    color: #042630;
-  }
   label {
-    margin-left: 20px;
+    scale: 0.7;
+  }
+  footer p {
+    font-size: 12px;
   }
 }
-h1 {
-  color: #041421;
-}
-
-header {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  height: 80px;
-  gap: 30px;
-  background-color: #5aa7aa;
-}
-
-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
-  background-color: #86b9b0;
-}
-
-.toggle {
-  cursor: pointer;
-}
-
-.checkbox_t {
-  position: absolute;
-  opacity: 0;
-}
-.checkbox_t:checked + .switch {
-  background-color: #d0d6d6;
-}
-.checkbox_t:checked + .switch:before {
-  left: 45px;
-  background-color: #041421;
-}
-
-.switch {
-  background-color: #041421;
-  width: 70px;
-  height: 30px;
-  border-radius: 30px;
-  position: relative;
-  transition: background 0.2s;
-}
-
-.switch:before {
-  content: "";
-  background-color: #d0d6d6;
-  width: 22px;
-  height: 22px;
-  position: absolute;
-  border-radius: 50%;
-  top: 4px;
-  left: 4px;
-  transition: left 0.5s;
-}/*# sourceMappingURL=main.css.map */
