--- a/main.scss
+++ b/main.scss
@@ -16,12 +16,103 @@ body {
 }
 @media only screen and (max-width: 600px) { 
     h1 {
-        font-size: 20px;
+        font-size: 15px;
+    }
+    header {
+        height: 50px;
+    }
+    .nav {
+        width: 100%;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 240px;
+        background: rgba( 255, 255, 255, 0.5 );
+        backdrop-filter: blur( 5px );
+        transform: scaleY(0);
+        transform-origin: 50% 0;
+        transition: transform 0.5s ease-in-out;
+    }
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 20px;
+        height: 30px;
+        text-decoration: none;
+        color: $darkgrey;
+    }
+    .hamburger_menu {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        width: 45px;
+        height: 40px;
+        transition: 0.6s;
+        scale: 0.6;
+    }
+    .check{
+        &:checked ~ .nav{
+            transform: scaleY(1);
+        }
+        &:checked ~ .hamburger_menu span:nth-child(1) {
+            transform: rotate(45deg);
+            transform-origin: 0% 0%;
+            margin-left: 8px;
+        }
+        &:checked ~ .hamburger_menu span:nth-child(2) {
+            opacity: 0;
+        }
+        &:checked ~ .hamburger_menu span:nth-child(3) {
+            transform: rotate(-45deg);
+            transform-origin: 0% 100%;
+            margin-left: 8px;
+        }
+        &:checked ~ .hamburger_menu {
+            transform: rotate(180deg);
+        }
+        position: absolute;
+        display: block;
+        z-index: 1;
+        margin-left: 45px;
+        height: 50px;
+        width: 50px;
+        opacity: 0;
+        scale: 0.7;
+    }
+    span {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 7px;
+        border-radius: 10px;
+        background-color: $darkgrey;
+        &:nth-child(1) {
+            transition: 0.4s;
+        }
+        &:nth-child(2) {
+            margin-top: 15px;
+        }
+        &:nth-child(3) {
+            margin-top: 30px;
+            transition: 0.4s;
+        }
+    }
+    label {
+        scale: 0.7;
+    }
+    footer p {
+        font-size: 12px;
     }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 600px) and (max-width: 768px) {
     h1 {
-        font-size: 35px;
+        font-size: 30px;
+    }
+    header {
+        height: 70px;
     }
     .nav {
         width: 100%;
@@ -54,6 +145,7 @@ body {
         width: 45px;
         height: 40px;
         transition: 0.6s;
+        scale: 0.8;
     }
     .check{
         &:checked ~ .nav{
@@ -78,7 +170,7 @@ body {
         position: absolute;
         display: block;
         z-index: 1;
-        margin-left: 175px;
+        margin-left: 155px;
         height: 50px;
         width: 50px;
         opacity: 0;
@@ -101,17 +193,44 @@ body {
             transition: 0.4s;
         }
     }
+    label {
+        scale: 0.8;
+    }
 }
 @media only screen and (min-width: 768px) { 
-    .check {
-        visibility: hidden;
+    header {
+        height: 70px;
     }
-    span {
+    h1 {
+        font-size: 25px;
+    }
+    .check, span{
         visibility: hidden;
     }
     .nav {
         display: flex;
-        gap: 30px;
+        gap: 25px;
+    }
+    a {
+        text-decoration: none;
+        color: $darkgrey;
+        font-weight: bold;
+        font-size: 15px;
+        &:hover {
+            color: $darkblue;
+        }
+    }
+    label {
+        scale: 0.9;
+        margin-left: 20px;
+    }
+}
+@media only screen and (min-width: 992px) { 
+    h1 {
+        font-size: 35px;
+    }
+    header {
+        height: 80px;
     }
     a {
         text-decoration: none;
@@ -123,6 +242,7 @@ body {
         }
     }
     label {
+        scale: 0.9;
         margin-left: 20px;
     }
 }
@@ -134,7 +254,6 @@ header {
     width: 100%;
     align-items: center;
     justify-content: center;
-    height: 80px;
     gap: 30px;
     background-color: $blue;
 }
