--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-$darkgrey: #041421;
-$darkblue: #042630;
-$blue: #5aa7aa;
-$lightblue: #86b9b0;
-$white: #d0d6d6;
+//lightmode
+$white: #ffffff;
+$white_second: #d8d6d6;
+$text_primary_light: #2d3748;
+$text_secondary_light: #4a5568;
+$text_hover_light: #2b6cb0;
 * {
     margin: 0;
     padding: 0;
@@ -42,7 +43,6 @@ body {
         padding: 20px;
         height: 30px;
         text-decoration: none;
-        color: $darkgrey;
         font-size: 13px;
     }
     .hamburger_menu {
@@ -89,7 +89,7 @@ body {
         width: 100%;
         height: 7px;
         border-radius: 10px;
-        background-color: $darkgrey;
+        background-color: $text_primary_light;
         &:nth-child(1) {
             transition: 0.4s;
         }
@@ -136,7 +136,6 @@ body {
         padding: 20px;
         height: 30px;
         text-decoration: none;
-        color: $darkgrey;
     }
     .hamburger_menu {
         display: flex;
@@ -181,7 +180,7 @@ body {
         width: 100%;
         height: 7px;
         border-radius: 10px;
-        background-color: $darkgrey;
+        background-color: $text_primary_light;
         &:nth-child(1) {
             transition: 0.4s;
         }
@@ -213,12 +212,8 @@ body {
     }
     a {
         text-decoration: none;
-        color: $darkgrey;
         font-weight: bold;
         font-size: 15px;
-        &:hover {
-            color: $darkblue;
-        }
     }
     label {
         scale: 0.9;
@@ -234,12 +229,8 @@ body {
     }
     a {
         text-decoration: none;
-        color: $darkgrey;
         font-weight: bold;
         font-size: 20px;
-        &:hover {
-            color: $darkblue;
-        }
     }
     label {
         scale: 0.9;
@@ -247,7 +238,7 @@ body {
     }
 }
 h1 {
-    color: $darkgrey;
+    color: $text_primary_light;
 }
 header {
     display: flex;
@@ -255,14 +246,21 @@ header {
     align-items: center;
     justify-content: center;
     gap: 30px;
-    background-color: $blue;
+    background-color: $white_second;
+}
+a {
+    color: $text_secondary_light;
+    &:hover {
+        color: $text_hover_light;
+    }
 }
 footer {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 50px;
-    background-color: $lightblue;
+    color: $text_primary_light;
+    background-color: $white_second;
 }
 .toggle {
     cursor: pointer;
@@ -275,11 +273,11 @@ footer {
     }
     &:checked + .switch:before {
         left: 45px;
-        background-color: $darkgrey;
+        background-color: $text_primary_light;
     }
 }
 .switch {
-    background-color: $darkgrey;
+    background-color: $text_primary_light;
     width: 70px;
     height: 30px;
     border-radius: 30px;
