--- a/main.scss
+++ b/main.scss
@@ -5,6 +5,12 @@ $white_second: #d8d6d6;
 $text_primary_light: #2d3748;
 $text_secondary_light: #4a5568;
 $text_hover_light: #2b6cb0;
+//darkmode
+$dark: #2d3748;
+$dark_second: #283141;
+$text_primary_dark: #f7fafc;
+$text_secondary_dark: #e2e8f0;
+$text_hover_dark: #81e6d9;
 * {
     margin: 0;
     padding: 0;
