--- a/main.scss
+++ b/main.scss
@@ -219,7 +219,8 @@ body {
     a {
         text-decoration: none;
         font-weight: bold;
-        font-size: 15px;
+        font-size: 14px;
+        padding: 8px;
     }
     label {
         scale: 0.9;
@@ -251,7 +252,7 @@ header {
     width: 100%;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
     background-color: $white_second;
 }
 a {
