--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,72 @@ body {
   overflow-x: hidden;
 }
 
+h1 {
+  color: #2d3748;
+}
+
+header {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  background-color: #d8d6d6;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  color: #2d3748;
+  background-color: #d8d6d6;
+}
+
+a {
+  color: #4a5568;
+}
+a:hover {
+  color: #2b6cb0;
+}
+
+.toggle {
+  cursor: pointer;
+}
+
+.checkbox_t {
+  position: absolute;
+  opacity: 0;
+}
+.checkbox_t:checked + .switch {
+  background-color: #ffffff;
+}
+.checkbox_t:checked + .switch:before {
+  left: 45px;
+  background-color: #2d3748;
+}
+
+.switch {
+  background-color: #2d3748;
+  width: 70px;
+  height: 30px;
+  border-radius: 30px;
+  position: relative;
+  transition: background 0.2s;
+}
+
+.switch:before {
+  content: "";
+  background-color: #ffffff;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  border-radius: 50%;
+  top: 4px;
+  left: 4px;
+  transition: left 0.5s;
+}
+
 @media only screen and (max-width: 600px) {
   h1 {
     font-size: 15px;
@@ -233,69 +299,4 @@ body {
     scale: 0.9;
     margin-left: 20px;
   }
-}
-h1 {
-  color: #2d3748;
-}
-
-header {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  background-color: #d8d6d6;
-}
-
-a {
-  color: #4a5568;
-}
-a:hover {
-  color: #2b6cb0;
-}
-
-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
-  color: #2d3748;
-  background-color: #d8d6d6;
-}
-
-.toggle {
-  cursor: pointer;
-}
-
-.checkbox_t {
-  position: absolute;
-  opacity: 0;
-}
-.checkbox_t:checked + .switch {
-  background-color: #ffffff;
-}
-.checkbox_t:checked + .switch:before {
-  left: 45px;
-  background-color: #2d3748;
-}
-
-.switch {
-  background-color: #2d3748;
-  width: 70px;
-  height: 30px;
-  border-radius: 30px;
-  position: relative;
-  transition: background 0.2s;
-}
-
-.switch:before {
-  content: "";
-  background-color: #ffffff;
-  width: 22px;
-  height: 22px;
-  position: absolute;
-  border-radius: 50%;
-  top: 4px;
-  left: 4px;
-  transition: left 0.5s;
-}
+}/*# sourceMappingURL=main.css.map */
