--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,12 @@
 body {
   background-color: #ffffff;
   overflow-x: hidden;
+  transition: 0.3s;
 }
 
 h1 {
   color: #2d3748;
+  transition: 0.3s;
 }
 
 header {
@@ -22,6 +24,7 @@ header {
   justify-content: center;
   gap: 20px;
   background-color: #d8d6d6;
+  transition: 0.3s;
 }
 
 footer {
@@ -31,13 +34,16 @@ footer {
   height: 50px;
   color: #2d3748;
   background-color: #d8d6d6;
+  transition: 0.3s;
 }
 
 a {
   color: #4a5568;
+  transition: 0.3s;
 }
 a:hover {
   color: #2b6cb0;
+  transition: 0.3s;
 }
 
 .toggle {
@@ -79,22 +85,31 @@ a:hover {
 
 .dark-mode body {
   background-color: #2d3748;
+  transition: 0.3s;
 }
 .dark-mode header {
   background-color: #283141;
+  transition: 0.3s;
 }
 .dark-mode h1 {
   color: #f7fafc;
+  transition: 0.3s;
 }
 .dark-mode a {
   color: #e2e8f0;
+  transition: 0.3s;
 }
 .dark-mode a:hover {
   color: #81e6d9;
+  transition: 0.3s;
 }
 .dark-mode footer {
   background-color: #283141;
   color: #f7fafc;
+  transition: 0.3s;
+}
+.dark-mode span {
+  background-color: #f7fafc;
 }
 
 @media only screen and (max-width: 600px) {
@@ -178,6 +193,7 @@ a:hover {
   }
   span:nth-child(2) {
     margin-top: 15px;
+    transition: 0.4s;
   }
   span:nth-child(3) {
     margin-top: 30px;
@@ -269,6 +285,7 @@ a:hover {
   }
   span:nth-child(2) {
     margin-top: 15px;
+    transition: 0.4s;
   }
   span:nth-child(3) {
     margin-top: 30px;
