--- a/main.scss
+++ b/main.scss
@@ -128,7 +128,9 @@ a {
     span {
         background-color: $text_primary_dark;
     }
-    
+    .loader {
+        border-top: 16px solid $text_hover_dark;
+    }
 }
 @media only screen and (max-width: 600px) { 
     h1 {
@@ -388,7 +390,7 @@ footer {
     position: absolute;
     opacity: 0;
     &:checked + .switch {
-        background-color: $white;
+        background-color: $white_l;
     }
     &:checked + .switch:before {
         left: 45px;
@@ -405,7 +407,7 @@ footer {
 }
 .switch:before {
     content: "";
-    background-color: $white;
+    background-color: $white_l;
     width: 22px;
     height: 22px;
     position: absolute;
@@ -416,18 +418,18 @@ footer {
 }
 
 .loader {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
+    border: 16px solid $white_second;
+    border-top: 16px solid $text_hover_light;
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    animation: spin 2s linear infinite;
+    animation: spin 1.5s linear infinite;
     position: fixed;
     top: 50%;
     left: 50%;
     margin-top: -60px;
     margin-left: -60px;
-    z-index: 9999;
+    z-index: 1;
 }
 
 @keyframes spin {
