--- a/main.scss
+++ b/main.scss
@@ -10,7 +10,7 @@ $dark_d: #2d3748;
 $dark_second: #283141;
 $text_primary_dark: #f7fafc;
 $text_secondary_dark: #e2e8f0;
-$text_hover_dark: #f36259;
+$text_hover_dark: #81e6d9;
 * {
     margin: 0;
     padding: 0;
