--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ body {
   background-color: #ffffff;
   overflow-x: hidden;
   transition: 0.2s;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
 }
 
 h1 {
@@ -31,10 +35,14 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50px;
+  min-height: 50px;
   color: #2d3748;
   background-color: #d8d6d6;
   transition: 0.2s;
+}
+
+.container {
+  flex: 1;
 }
 
 a {
@@ -91,6 +99,29 @@ a:hover {
   transition: left 0.5s;
 }
 
+.loader {
+  border: 16px solid #d8d6d6;
+  border-top: 16px solid #2b6cb0;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1.5s linear infinite;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -60px;
+  margin-left: -60px;
+  z-index: 1;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .dark-mode body {
   background-color: #2d3748;
   transition: 0.2s;
@@ -353,94 +384,5 @@ a:hover {
   label {
     scale: 0.9;
     margin-left: 20px;
-  }
-}
-h1 {
-  color: #2d3748;
-}
-
-header {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  background-color: #d8d6d6;
-}
-
-a {
-  color: #4a5568;
-}
-a:hover {
-  color: #2b6cb0;
-}
-
-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
-  color: #2d3748;
-  background-color: #d8d6d6;
-}
-
-.toggle {
-  cursor: pointer;
-}
-
-.checkbox_t {
-  position: absolute;
-  opacity: 0;
-}
-.checkbox_t:checked + .switch {
-  background-color: #ffffff;
-}
-.checkbox_t:checked + .switch:before {
-  left: 45px;
-  background-color: #2d3748;
-}
-
-.switch {
-  background-color: #2d3748;
-  width: 70px;
-  height: 30px;
-  border-radius: 30px;
-  position: relative;
-  transition: background 0.2s;
-}
-
-.switch:before {
-  content: "";
-  background-color: #ffffff;
-  width: 22px;
-  height: 22px;
-  position: absolute;
-  border-radius: 50%;
-  top: 4px;
-  left: 4px;
-  transition: left 0.5s;
-}
-
-.loader {
-  border: 16px solid #d8d6d6;
-  border-top: 16px solid #2b6cb0;
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 1.5s linear infinite;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -60px;
-  margin-left: -60px;
-  z-index: 1;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
   }
 }/*# sourceMappingURL=main.css.map */
