--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -1,17 +1,57 @@
 .container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.container_cards {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: repeat(3, 200px);
+  grid-template-rows: repeat(3, 200px);
   gap: 30px;
 }
 
 .block {
-  background-color: aqua;
-  width: 100px;
-  height: 100px;
+  border-radius: 30px;
+  padding: 20px;
+  background-color: #2b6cb0;
+  animation: pop-up 1.5s ease;
+}
+.block:nth-child(1) {
+  grid-area: 1/1/3/2;
 }
 .block:nth-child(2) {
-  width: 200px;
+  grid-area: 2/3/4/4;
 }
 .block:nth-child(3) {
-  width: 200px;
+  grid-area: 1/2/2/4;
+}
+.block:nth-child(4) {
+  grid-area: 3/1/4/3;
+}
+.block:nth-child(5) {
+  grid-area: 2/2/3/3;
+}
+.block img {
+  width: 100%;
+  filter: drop-shadow(0 0 10px #ffffff);
+}
+
+.dark-mode .block {
+  background-color: #f36259;
+}
+
+@keyframes pop-up {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  60% {
+    transform: scale(1.05);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }/*# sourceMappingURL=o_nas.css.map */
