--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -1,16 +1,67 @@
+//lightmode
+$white_l: #ffffff;
+$white_second: #d8d6d6;
+$text_primary_light: #2d3748;
+$text_secondary_light: #4a5568;
+$text_hover_light: #2b6cb0;
+//darkmode
+$dark_d: #2d3748;
+$dark_second: #283141;
+$text_primary_dark: #f7fafc;
+$text_secondary_dark: #e2e8f0;
+$text_hover_dark: #f36259;
 .container {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.container_cards {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(3, 200px);
+    grid-template-rows: repeat(3, 200px);
     gap: 30px;
 }
 .block {
-    background-color: aqua;
-    width: 100px;
-    height: 100px;
+    border-radius: 30px;
+    padding: 20px;
+    background-color: $text_hover_light;
+    animation: pop-up 1.5s ease;
+    &:nth-child(1) {
+        grid-area: 1/1/3/2;
+    }
     &:nth-child(2) {
-        width: 200px;
+        grid-area: 2/3/4/4;
     }
     &:nth-child(3) {
-        width: 200px;
+        grid-area: 1/2/2/4;
+    }
+    &:nth-child(4) {
+        grid-area: 3/1/4/3;
+    }
+    &:nth-child(5) {
+        grid-area: 2/2/3/3;
+    }
+    img {
+        width: 100%;
+        filter: drop-shadow(0 0 10px $white_l);
+    }
+}
+.dark-mode {
+    .block {
+        background-color: $text_hover_dark;
+    }
+}
+@keyframes pop-up {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    60%{
+        transform: scale(1.05);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
     }
 }
