--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -21,6 +21,15 @@
 .block:nth-child(1) {
   grid-area: 1/1/3/2;
 }
+.block:nth-child(1)::before {
+  content: "";
+  display: none;
+  position: absolute;
+  width: 620px;
+  height: 620px;
+  border-radius: 30px;
+  background-color: #f36259;
+}
 .block:nth-child(2) {
   grid-area: 2/3/4/4;
 }
