--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -29,6 +29,15 @@ $text_hover_dark: #f36259;
     animation: pop-up 1.5s ease;
     &:nth-child(1) {
         grid-area: 1/1/3/2;
+        &::before {
+            content: '';
+            display: none;
+            position: absolute;
+            width: 620px;
+            height: 620px;
+            border-radius: 30px;
+            background-color: $text_hover_dark;
+        }
     }
     &:nth-child(2) {
         grid-area: 2/3/4/4;
