--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -1,6 +1,12 @@
+.dark-mode .block {
+  background-color: #f36259;
+}
+
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -13,23 +19,15 @@
 }
 
 .block {
+  position: relative;
   border-radius: 30px;
   padding: 20px;
   background-color: #2b6cb0;
   animation: pop-up 1.5s ease;
+  z-index: 1;
 }
 .block:nth-child(1) {
   grid-area: 1/1/3/2;
-}
-.block:nth-child(1)::before {
-  content: "";
-  display: none;
-  position: absolute;
-  width: 620px;
-  height: 620px;
-  border-radius: 30px;
-  background-color: aqua;
-  opacity: 1;
 }
 .block:nth-child(2) {
   grid-area: 2/3/4/4;
@@ -48,13 +46,28 @@
   filter: drop-shadow(0 0 10px #ffffff);
 }
 
-.show {
-  display: block;
-  background-color: chocolate;
+.content_cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  width: 660px;
+  height: 660px;
 }
 
-.dark-mode .block {
-  background-color: #f36259;
+.content {
+  width: 650px;
+  height: 650px;
+  border-radius: 30px;
+  background-color: brown;
+  position: absolute;
+  opacity: 0;
+}
+
+.show-content {
+  opacity: 1;
+  z-index: 2;
 }
 
 @keyframes pop-up {
