--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -10,9 +10,16 @@ $dark_second: #283141;
 $text_primary_dark: #f7fafc;
 $text_secondary_dark: #e2e8f0;
 $text_hover_dark: #f36259;
+.dark-mode {
+    .block {
+        background-color: $text_hover_dark;
+    }
+}
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -23,22 +30,14 @@ $text_hover_dark: #f36259;
     gap: 30px;
 }
 .block {
+    position: relative;
     border-radius: 30px;
     padding: 20px;
     background-color: $text_hover_light;
     animation: pop-up 1.5s ease;
+    z-index: 1;
     &:nth-child(1) {
         grid-area: 1/1/3/2;
-        &::before {
-            content: '';
-            display: none;
-            position: absolute;
-            width: 620px;
-            height: 620px;
-            border-radius: 30px;
-            background-color: aqua;
-            opacity: 1;
-        }
     }
     &:nth-child(2) {
         grid-area: 2/3/4/4;
@@ -57,14 +56,26 @@ $text_hover_dark: #f36259;
         filter: drop-shadow(0 0 10px $white_l);
     }
 }
-.show {
-    display: block;
-    background-color: chocolate;
+.content_cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    width: 660px;
+    height: 660px;
 }
-.dark-mode {
-    .block {
-        background-color: $text_hover_dark;
-    }
+.content {
+    width: 650px;
+    height: 650px;
+    border-radius: 30px;
+    background-color: brown;
+    position: absolute;
+    opacity: 0;
+}
+.show-content {
+    opacity: 1;
+    z-index: 2;
 }
 @keyframes pop-up {
     0% {
