--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,6 +38,9 @@ header {
     gap: 20px;
     background-color: $white_second;
     transition: 0.2s;
+    position: sticky;
+    top: 0;
+    z-index: 5;
 }
 footer {
     display: flex;
