--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -72,8 +72,10 @@ $text_hover_dark: #f36259;
     background-color: brown;
     position: absolute;
     opacity: 0;
+    transition: 0.5s;
 }
 .show-content {
+    transition: 0.5s;
     opacity: 1;
     z-index: 2;
 }
