--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -64,6 +64,37 @@
   position: absolute;
   opacity: 0;
   transition: 0.5s;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.content .close {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+}
+.content .close .span {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: black;
+  border-radius: 10px;
+}
+.content .close .span:nth-child(1) {
+  margin-top: 5px;
+  transform: rotate(45deg);
+  transform-origin: 0% 0%;
+  margin-left: 10px;
+}
+.content .close .span:nth-child(2) {
+  margin-top: 32px;
+  transform: rotate(-45deg);
+  transform-origin: 0% 100%;
+  margin-left: 10px;
 }
 
 .show-content {
