--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -28,6 +28,7 @@ $text_hover_dark: #f36259;
     grid-template-columns: repeat(3, 200px);
     grid-template-rows: repeat(3, 200px);
     gap: 30px;
+    
 }
 .block {
     position: relative;
@@ -76,33 +77,37 @@ $text_hover_dark: #f36259;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    .close {
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        width: 40px;
-        height: 40px;
-        margin-left: auto;
-        .span {
-            display: block;
-            position: absolute;
-            width: 100%;
-            height: 5px;
-            background-color: black;
-            border-radius: 10px;
-            &:nth-child(1) {
-                margin-top: 5px;
-                transform: rotate(45deg);
-                transform-origin: 0% 0%;
-                margin-left: 10px;
-            }
-            &:nth-child(2) {
-                margin-top: 32px;
-                transform: rotate(-45deg);
-                transform-origin: 0% 100%;
-                margin-left: 10px;
-            }
-        }
+}
+.close {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+    &:active {
+        scale: 1.1;
+        transition: 0.2s;
+    }
+}    
+.span {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    background-color: black;
+    border-radius: 10px;
+    &:nth-child(1) {
+        margin-top: 5px;
+        transform: rotate(45deg);
+        transform-origin: 0% 0%;
+        margin-left: 10px;
+    }
+    &:nth-child(2) {
+        margin-top: 32px;
+        transform: rotate(-45deg);
+        transform-origin: 0% 100%;
+        margin-left: 10px;
     }
 }
 .show-content {
