--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,13 @@
 
 body {
   background-color: #ffffff;
-  overflow-x: hidden;
   transition: 0.2s;
+  margin: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   min-height: 100vh;
-  margin: 0;
 }
 
 h1 {
@@ -38,10 +39,12 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
   min-height: 50px;
   color: #2d3748;
   background-color: #d8d6d6;
   transition: 0.2s;
+  z-index: 5;
 }
 
 .container {
