--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -1,8 +1,27 @@
 .dark-mode .block {
   background-color: #f36259;
 }
+.dark-mode .content {
+  background-color: #f36259;
+}
+
+.blur {
+  position: sticky;
+  display: block;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  z-index: -1;
+  opacity: 0;
+}
+
+.blur-active {
+  z-index: 3;
+  opacity: 0.4;
+}
 
 .container {
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,7 +79,7 @@
   width: 660px;
   height: 660px;
   border-radius: 30px;
-  background-color: brown;
+  background-color: #2b6cb0;
   position: absolute;
   opacity: 0;
   transition: 0.5s;
@@ -106,7 +125,7 @@
 .show-content {
   transition: 0.5s;
   opacity: 1;
-  z-index: 2;
+  z-index: 4;
 }
 
 @keyframes pop-up {
