--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -14,8 +14,25 @@ $text_hover_dark: #f36259;
     .block {
         background-color: $text_hover_dark;
     }
+    .content {
+        background-color: $text_hover_dark;
+    }
+}
+.blur {
+    position: sticky;
+    display: block;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    z-index: -1;
+    opacity: 0;
+}
+.blur-active {
+    z-index: 3;
+    opacity: 0.4;
 }
 .container {
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,7 +45,6 @@ $text_hover_dark: #f36259;
     grid-template-columns: repeat(3, 200px);
     grid-template-rows: repeat(3, 200px);
     gap: 30px;
-    
 }
 .block {
     position: relative;
@@ -70,7 +86,7 @@ $text_hover_dark: #f36259;
     width: 660px;
     height: 660px;
     border-radius: 30px;
-    background-color: brown;
+    background-color: $text_hover_light;
     position: absolute;
     opacity: 0;
     transition: 0.5s;
@@ -113,7 +129,7 @@ $text_hover_dark: #f36259;
 .show-content {
     transition: 0.5s;
     opacity: 1;
-    z-index: 2;
+    z-index: 4;
 }
 @keyframes pop-up {
     0% {
