--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -15,31 +15,18 @@ $text_hover_dark: #f36259;
         background-color: $text_hover_dark;
     }
     .content {
-        background-color: $text_hover_dark;
+        background-color: $text_hover_light;
     }
     .span {
         background-color: $dark_second;
     }
 }
-.blur {
-    position: sticky;
-    display: block;
-    width: 100%;
-    height: 100vh;
-    background-color: black;
-    z-index: -1;
-    opacity: 0;
-}
-.blur-active {
-    z-index: 3;
-    opacity: 0.4;
-}
 .container {
-    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -146,4 +133,30 @@ $text_hover_dark: #f36259;
         opacity: 1;
         transform: scale(1);
     }
+}
+@media only screen and (max-width: 600px) {
+    .container_cards {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+    }
+    .block {
+        height: 200px;
+    }
+    .content_cards {
+        width: 80%;
+    }
+    .content {
+        width: 100%;
+        height: 500px;
+    }
+}
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+
+}
+@media only screen and (min-width: 768px) {
+
+}
+@media only screen and (min-width: 992px) {
+
 }
