--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -2,33 +2,18 @@
   background-color: #f36259;
 }
 .dark-mode .content {
-  background-color: #f36259;
+  background-color: #2b6cb0;
 }
 .dark-mode .span {
   background-color: #283141;
 }
 
-.blur {
-  position: sticky;
-  display: block;
-  width: 100%;
-  height: 100vh;
-  background-color: black;
-  z-index: -1;
-  opacity: 0;
-}
-
-.blur-active {
-  z-index: 3;
-  opacity: 0.4;
-}
-
 .container {
-  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -142,5 +127,22 @@
   100% {
     opacity: 1;
     transform: scale(1);
+  }
+}
+@media only screen and (max-width: 600px) {
+  .container_cards {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+  }
+  .block {
+    height: 200px;
+  }
+  .content_cards {
+    width: 80%;
+  }
+  .content {
+    width: 100%;
+    height: 500px;
   }
 }/*# sourceMappingURL=o_nas.css.map */
