--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -129,11 +129,12 @@
     transform: scale(1);
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .container_cards {
     display: flex;
     flex-direction: column;
     width: 80%;
+    height: 100vh;
   }
   .block {
     height: 200px;
@@ -144,5 +145,8 @@
   .content {
     width: 100%;
     height: 500px;
+  }
+  .margin {
+    margin-top: 150px;
   }
 }/*# sourceMappingURL=o_nas.css.map */
