--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -134,11 +134,12 @@ $text_hover_dark: #f36259;
         transform: scale(1);
     }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
     .container_cards {
         display: flex;
         flex-direction: column;
         width: 80%;
+        height: 100vh;
     }
     .block {
         height: 200px;
@@ -149,6 +150,9 @@ $text_hover_dark: #f36259;
     .content {
         width: 100%;
         height: 500px;
+    }
+    .margin {
+        margin-top: 150px;
     }
 }
 @media only screen and (min-width: 600px) and (max-width: 768px) {
