--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,6 +54,9 @@ footer {
     color: $text_primary_light;
     background-color: $white_second;
     transition: 0.2s;
+    position: sticky;
+    bottom: 0;
+    z-index: 5;
 }
 .container {
     flex: 1;
