--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -29,6 +29,7 @@ $text_hover_dark: #f36259;
     width: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
+    background-color: aqua;
 }
 .container_cards {
     display: grid;
