--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -2,7 +2,7 @@
   background-color: #f36259;
 }
 .dark-mode .content {
-  background-color: #2b6cb0;
+  background-color: #f36259;
 }
 .dark-mode .span {
   background-color: #283141;
