--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -15,7 +15,7 @@ $text_hover_dark: #f36259;
         background-color: $text_hover_dark;
     }
     .content {
-        background-color: $text_hover_light;
+        background-color: $text_hover_dark;
     }
     .span {
         background-color: $dark_second;
