--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,11 @@ footer {
   flex: 1;
 }
 
-.nav a {
+a {
   color: #4a5568;
   transition: 0.2s;
 }
-.nav a:hover {
+a:hover {
   color: #2b6cb0;
   transition: 0.2s;
 }
@@ -145,11 +145,11 @@ footer {
   color: #f7fafc;
   transition: 0.2s;
 }
-.dark-mode .nav a {
+.dark-mode a {
   color: #e2e8f0;
   transition: 0.2s;
 }
-.dark-mode .nav a:hover {
+.dark-mode a:hover {
   color: #f36259;
   transition: 0.2s;
 }
@@ -192,7 +192,7 @@ footer {
     transform-origin: 50% 0;
     transition: transform 0.5s ease-in-out;
   }
-  .nav a {
+  a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -286,7 +286,7 @@ footer {
     transform-origin: 50% 0;
     transition: transform 0.5s ease-in-out;
   }
-  .nav a {
+  a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -369,7 +369,7 @@ footer {
     display: flex;
     gap: 25px;
   }
-  .nav a {
+  a {
     text-decoration: none;
     font-weight: bold;
     font-size: 14px;
@@ -387,7 +387,7 @@ footer {
   header {
     height: 80px;
   }
-  .nav a {
+  a {
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
