--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,7 +61,7 @@ footer {
 .container {
     flex: 1;
 }
-.nav a {
+a {
     color: $text_secondary_light;
     transition: 0.2s;
     &:hover {
@@ -140,7 +140,7 @@ footer {
         color: $text_primary_dark;
         transition: 0.2s;
     }
-    .nav a {
+    a {
         color: $text_secondary_dark;
         transition: 0.2s;
         &:hover {
@@ -187,7 +187,7 @@ footer {
         transform-origin: 50% 0;
         transition: transform 0.5s ease-in-out;
     }
-    .nav a {
+    a {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -281,7 +281,7 @@ footer {
         transform-origin: 50% 0;
         transition: transform 0.5s ease-in-out;
     }
-    .nav a {
+    a {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -364,7 +364,7 @@ footer {
         display: flex;
         gap: 25px;
     }
-    .nav a {
+    a {
         text-decoration: none;
         font-weight: bold;
         font-size: 14px;
@@ -382,7 +382,7 @@ footer {
     header {
         height: 80px;
     }
-    .nav a {
+    a {
         text-decoration: none;
         font-weight: bold;
         font-size: 20px;
