--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -52,6 +52,12 @@
   background-color: #2b6cb0;
   z-index: 1;
   animation: pop-up 1.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
 }
 .block:nth-child(1) {
   grid-area: 1/1/3/2;
@@ -169,9 +175,6 @@
   }
   .block {
     height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
   .content_cards {
     width: 80%;
