--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -102,6 +102,11 @@
   display: flex;
   flex-direction: column;
 }
+.content:nth-child(2) p {
+  padding: 10px;
+  color: #ffffff;
+  font-size: 20px;
+}
 .content:nth-child(5) img {
   max-width: 100%;
   max-height: 100%;
@@ -182,6 +187,9 @@
   .content {
     width: 100%;
     height: auto;
+  }
+  .content:nth-child(2) p {
+    font-size: 15px;
   }
   .content:nth-child(5) img {
     max-width: 100%;
