--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,7 @@ a:hover {
     margin-top: 210px;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     transform: scaleY(0);
     transform-origin: 50% 0;
     transition: transform 0.5s ease-in-out;
