--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -198,6 +198,7 @@ $text_hover_dark: #f36259;
     }
     .block {
         height: 200px;
+        font-size: 15px;
     }
     .content_cards {
         width: 80%;
