--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -212,7 +212,12 @@
     width: auto;
   }
   .content .close {
-    scale: 0.6;
+    left: 20px;
+    margin-bottom: 20px;
+    scale: 0.7;
+  }
+  .content::-webkit-scrollbar {
+    width: 1em;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 768px) {
