--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -1,5 +1,6 @@
 .dark-mode .block {
   background-color: #f36259;
+  color: #2d3748;
 }
 .dark-mode .content {
   background-color: #f36259;
@@ -61,7 +62,7 @@
   justify-content: center;
   color: #ffffff;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 700;
 }
 .block:nth-child(1) {
   grid-area: 1/1/3/2;
